--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 .background {
-  background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6));
-  /* url(../img/bg.jpg); */
+  background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),
+    url(../img/bg.jpg);
   background-position: center;
   background-attachment: scroll;
   background-repeat: no-repeat;
@@ -8,30 +8,71 @@
   height: 100vh;
   display: flex;
   flex-flow: column;
-  color: white;
-
+  filter: brightness(20%);
+  background-blend-mode: multiply;
+  background-color: rgb(36, 104, 250);
   -webkit-animation: blend-shift 1.6s cubic-bezier(0.25, 0.46, 0.45, 0.94)
     forwards;
-  animation: blend-shift 1.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+  animation: brightness-increase 3s ease forwards;
+  /* -webkit-animation: blend-shift 1.6s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    forwards;
+  animation: blend-shift 1.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards; */
 }
 
-@keyframes blend-shift {
-  0% {
-    background-blend-mode: normal;
+@keyframes brightness-increase {
+  from {
+    filter: brightness(20%);
   }
-  /* 
-      50% {
-        letter-spacing: -0.2em;
-        -webkit-filter: blur(6px);
-        filter: blur(6px);
-        opacity: 0, 5;
-        mix-blend-mode: luminosity;
-      } */
+  to {
+    filter: none;
+  }
+}
+
+/* Global Navigation Styling */
+.hero__nav {
+  -webkit-animation: nav-spread 1.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: nav-spread 1.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  justify-content: space-evenly;
+  align-self: flex-start;
+  padding-top: 0.5em;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+@keyframes nav-spread {
+  0% {
+    width: 50%;
+    opacity: 0.5;
+  }
 
   100% {
-    background-blend-mode: multiply;
-    background-color: rgba(0, 128, 255, 0.719);
+    width: 100%;
+    opacity: 1;
   }
+}
+
+.hero__nav a:visited {
+  color: white;
+}
+
+.hero__nav a:hover {
+  transform: scale(1.05);
+  color: rgb(190, 190, 190);
+}
+
+.hero__nav a:active {
+  color: rgb(124, 124, 124);
+}
+
+.hero__nav--current {
+  border-bottom: 4px solid rgba(255, 255, 255, 0.651);
+}
+
+.hero__nav a {
+  text-decoration: none;
+  font-size: 1.25em;
+  transition: all 300ms ease;
 }
 
 /* .background {
@@ -58,9 +99,8 @@
 .background__container {
   flex: 1;
   text-align: center;
-
   padding-top: 3em;
-  color: rgb(231, 33, 33);
+  color: rgb(89, 214, 245);
   font-size: 2vh;
 }
 
@@ -71,14 +111,13 @@
   -webkit-filter: blur(12px);
   filter: blur(12px);
   opacity: 0;
-
   mix-blend-mode: soft-light;
   -webkit-animation: focus-in-expand 2.3s cubic-bezier(0.25, 0.46, 0.45, 0.94)
     forwards;
   animation: focus-in-expand 2.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
 }
 
-/* @-webkit-keyframes focus-in-expand {
+@-webkit-keyframes focus-in-expand {
   0% {
     letter-spacing: -0.5em;
     -webkit-filter: blur(12px);
@@ -92,7 +131,7 @@
   }
 }
 
-@keyframes focus-in-expand {
+/* @keyframes focus-in-expand {
   0% {
     letter-spacing: -0.5em;
     -webkit-filter: blur(12px);
