--- a/styles/misc.css
+++ b/styles/misc.css
@@ -1,31 +1,121 @@
-/* ! Previous design, good animations... */
-nav {
-  background: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0.6),
-    rgba(0, 0, 0, 0.452)
-  );
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1;
+html {
+  background: rgb(216, 216, 216);
 }
 
-.hero__nav {
-  padding: 1em 0;
-  margin: 0;
+.misc-nav {
+  justify-content: space-evenly;
+  align-self: flex-start;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  padding: 0.5em;
+}
+
+.misc-nav a:visited {
+  color: black;
+}
+
+.misc-nav a:hover {
+  transform: scale(1.05);
+  color: rgb(190, 190, 190);
+}
+
+.misc-nav a:active {
+  color: rgb(124, 124, 124);
+}
+
+.misc-nav-current {
+  border-bottom: 4px solid rgba(255, 255, 255, 0.651);
+}
+
+.misc-nav a {
+  color: black;
+  text-decoration: none;
+  font-size: 1.25em;
+  transform: translateY(-1000px);
+  /* transition: all 300ms ease; */
+  -webkit-animation: nav-shift-down 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    forwards;
+  animation: nav-shift-down 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+}
+
+@keyframes nav-shift-down {
+  from {
+    transform: translateY(-1000px);
+  }
+
+  to {
+    transform: translateY(0);
+  }
+}
+
+.misc-textwrapper {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  margin: 1em 5em;
+  opacity: 0;
+  animation: text-appear 1s ease-in 1.5s forwards;
+}
+
+@keyframes text-appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .misc-textwrapper {
+    flex-flow: column;
+  }
+
+  .misc-textwrapper p {
+    margin-top: 1em;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  .misc-textwrapper p {
+    max-width: 35%;
+  }
+}
+
+.flex-masterwrapper {
+}
+
+.misc-textwrapper h1 {
+  margin: 5px 1em 0 0;
+  font-size: 2em;
+  flex: 1;
+  text-align: center;
+}
+
+.misc-textwrapper p {
+  flex: 1;
+  font-size: 1em;
+  margin-right: 1em;
 }
 
 /* Full Page Master Flexbox */
 .flex-masterwrapper {
   display: flex;
   width: 100%;
-  height: 100vh;
-  /* padding: 5px; */
+  max-height: 75vh;
+  margin-top: 2em;
+  opacity: 0;
+  animation: gallery-appear 1.2s ease-in 600ms forwards;
 }
 
-.flex-masterwrapper div {
-  /* margin: 5px; */
+@keyframes gallery-appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Child Images Should Obey Container's Sizing */
@@ -36,16 +126,26 @@ nav {
   height: 100%;
 }
 
+.test-img:active {
+  opacity: 0.3;
+}
+
+.test-img:hover {
+  opacity: 0.85;
+}
+
 /* First Flexbox Column Styles */
 .flex-col-1 {
   display: flex;
   flex-flow: column;
   flex: 1;
+  margin: 0.5em 0 1.5em 3em;
 }
 /* First Column Div Sizing */
 .flex-col-1 > div {
-  max-height: 33.33%;
   flex: 1;
+  margin: 0.5em 0.5em 0.5em 0;
+  max-height: calc(33.33% - 1em);
 }
 
 /* Second Flexbox Column Styles */
@@ -53,11 +153,13 @@ nav {
   display: flex;
   flex-flow: column;
   flex: 2;
+  margin: 0.5em 3em 2em 0;
 }
 
 /* Second Column Large Sizing */
 .col-2-top {
   flex: 2;
+  margin: 0.5em 0 0.5em 0.5em;
 }
 
 .col-2-bottom-row {
@@ -68,6 +170,11 @@ nav {
 /* Bottom Row Small Div Sizing */
 .col-2-bottom-row div {
   flex: 1;
+  margin: 0.5em 0.5em 0 0.5em;
+}
+
+.col-2-bottom-row div:last-child {
+  margin-right: 0;
 }
 
 /* .image-responsive {
