--- a/styles/zion.css
+++ b/styles/zion.css
@@ -2,42 +2,36 @@
 
 body {
   font-family: "Montserrat";
-  background: linear-gradient(rgb(37, 37, 37), rgb(112, 111, 111));
+  background: rgb(216, 216, 216);
 }
 
 .zion-nav {
-  -webkit-animation: nav-shift-down 1.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s
-    forwards;
-  animation: nav-shift-down 1.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s
-    forwards;
   justify-content: space-evenly;
   align-self: flex-start;
-  height: 0;
-  margin: 0;
-  transform: translateY(-1000px);
   display: flex;
   align-items: center;
   text-align: center;
-}
-
-@keyframes nav-shift-down {
-  from {
-    transform: translateY(-1000px);
-    margin: 0;
-    height: 0;
-  }
-
-  to {
-    transform: translateY(0);
-    height: 1em;
-    margin: 1em;
-  }
+  padding: 0.5em;
+  background: rgb(0, 0, 0);
 }
 
 .zion-nav a {
   text-decoration: none;
   font-size: 1.25em;
-  transition: all 300ms ease;
+  transform: translateY(-1000px);
+  -webkit-animation: nav-shift-down 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    forwards;
+  animation: nav-shift-down 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+}
+
+@keyframes nav-shift-down {
+  from {
+    transform: translateY(-1000px);
+  }
+
+  to {
+    transform: translateY(0);
+  }
 }
 
 .zion-nav a:visited {
@@ -45,7 +39,6 @@ body {
 }
 
 .zion-nav a:hover {
-  transform: scale(1.05);
   color: rgb(190, 190, 190);
 }
 
@@ -55,10 +48,6 @@ body {
 
 .zion-nav-current {
   border-bottom: 4px solid rgba(255, 255, 255, 0.651);
-}
-
-.github-icon {
-  color: white;
 }
 
 .hero-wrapper {
@@ -89,7 +78,7 @@ body {
   align-self: flex-end;
   color: white;
   background-color: rgb(0, 0, 0);
-  /* animation: index-grow 1.25s ease 1.5s forwards; */
+
   transition: all 1.25s ease;
 }
 
@@ -102,17 +91,6 @@ body {
   cursor: pointer;
 }
 
-/* Working */
-/* @keyframes index-grow {
-  from {
-    background-color: rgb(0, 0, 0);
-  }
-  to {
-    background-color: rgba(0, 0, 0, 0);
-    mix-blend-mode: normal;
-  }
-} */
-
 .hero-title {
   font-family: "Bungee", cursive;
   font-size: 10em;
@@ -120,40 +98,6 @@ body {
   margin-bottom: 0;
   color: white;
 }
-/* 
-.hero-nav {
-  -webkit-animation: nav-spread 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.5s
-    both;
-  animation: nav-spread 1.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  justify-content: space-evenly;
-  align-self: flex-start;
-  margin-top: 2em;
-  display: flex;
-  color: #fff;
-  background-color: rgb(0, 0, 0);
-} */
-
-/* @keyframes nav-spread {
-  0% {
-    background-color: rgb(0, 0, 0);
-    width: 50%;
-    opacity: 0.5;
-  }
-  
-    50% {
-      letter-spacing: -0.2em;
-      -webkit-filter: blur(6px);
-      filter: blur(6px);
-      opacity: 0, 5;
-      mix-blend-mode: luminosity;
-    } 
-
-  100% {
-    background-color: rgba(0, 0, 0, 0);
-    width: 100%;
-    opacity: 1;
-  }
-}  */
 
 .hero-contentwrapper h2 {
   font-family: "Montserrat";
@@ -184,6 +128,10 @@ body {
   margin-bottom: 2em;
 }
 
+.hero-buttonwrapper a {
+  text-decoration: none;
+}
+
 .hero-buttonwrapper a:hover > img {
   transform: scale(1.15);
 }
@@ -202,6 +150,10 @@ body {
 /* Top Level Gallery Div */
 .main-wrapper {
   margin: 0 1.5em 2em 1.5em;
+}
+
+.zionphotos-wrapper {
+  margin: 3em;
 }
 
 .zionphotos-wrapper div {
@@ -225,7 +177,7 @@ body {
 
 .zionphotos-wrapper img:hover {
   cursor: pointer;
-  opacity: 0.8;
+  filter: brightness(75%);
   -webkit-transform: scale(0.97);
   transform: scale(0.97);
 }
