--- a/styles/index.css
+++ b/styles/index.css
@@ -168,6 +168,12 @@
     forwards;
 }
 
+@media only screen and (max-width: 500px) {
+  .home-content-wrapper h1 {
+    margin: 0 0.5em;
+  }
+}
+
 .home-content-wrapper p {
   opacity: 0;
   -webkit-animation: paragraph-fade-in 300ms
