--- a/styles/index.css
+++ b/styles/index.css
@@ -66,6 +66,7 @@
 .home-nav a {
   text-decoration: none;
   font-size: 1.25em;
+  color: white;
   -webkit-transition: all 300ms ease;
   -o-transition: all 300ms ease;
   transition: all 300ms ease;
