--- a/styles/zion.css
+++ b/styles/zion.css
@@ -30,7 +30,7 @@ body {
   -webkit-transform: translateY(-1000px);
   -ms-transform: translateY(-1000px);
   transform: translateY(-1000px);
-
+  color: white;
   -webkit-animation: nav-shift-down 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94)
     forwards;
 
